--- a/index.html
+++ b/index.html
@@ -4,46 +4,59 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>IMA Zebra</title>
     </head>
     <body>
-        <header id="masthead">
+        <header>
             <!-- Start Header area -->
+            <img id="brand" src="images/z.png">
             <nav>
-                <div class="container">
-                    <h1 id="brand"></h1>
-                    <ul>
-                        <!-- Main navigation -->
-                        <li>
-                            <a href="">About Me</a>
-                        </li>
-                        <li>
-                            <a href="">Work</a>
-                        </li>
-                        <li>
-                            <a href="">Contact Me</a>
-                        </li>
-                    </ul>
-                </div>
+                <!-- Main navigation -->
+                         <a href="">About Me</a>
+                         <a href="">Work</a>
+                        <a href="">Contact Me</a>
             </nav>
         </header>
 
-        <section id="">
+        <section id="hero">
             <!-- Full bleed hero image -->
-            <img src="" alt="" />
+            <img src="images/zebra.jpg" alt="" />
+            <h1>IMA Zebra</h1>
+            <a href="Africa"></a>
         </section>
-
-        <section id="main-content">
-            <!-- Main body content -->
-            <div class="container">
-                <section class="column"><!-- First column --></section>
-                <section class="column"><!-- Second column --></section>
-                <section class="column"><!-- Third column --></section>
-            </div>
-        </section>
-
-        <section id="social-links"><!-- Full width section, above footer --></section>
-
-        <footer><!-- Footer --></footer>
+          <!-- Main body content --> 
+        <main>
+            <h2>I'm a Zebra</h2>
+            <article>
+                 <Article><img src="images/africa.png" alt="">
+                          <h3>My Home</h3>
+                          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, doloremque!</p>
+                         <a href="">See my Home</a>"
+                        </Article> 
+                <article>
+                    <img src="images/grass.jpg" alt="">
+                    <h3>My diet</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, doloremque!</p>
+                   <a href="">Grass is great</a>"
+                </Article>
+                <Article><img src="images/stripes.jpg" alt="">
+                    <h3>Zebra stripes</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, doloremque!</p>
+                   <a href="">Check out my stripes</a>
+                </Article>
+                </article>
+        </main>
+        <!-- full width section,above footer -->
+        <section id="social-links">
+            <p>I'm pretty social too, we should be friends.</p>
+            <a href=""><img src="images/facebook.svg" alt="facebook"></a>
+            <a href=""><img src="images/twitter.svg" alt="Twitter"></a>
+            <a href=""><img src="images/instagram.svg" alt="Instagram"></a>
+            <a href=""><img src="images/linkedin.svg" alt="Linkedin"></a>
+       </section>
+       <!-- foooter -->
+        <footer>
+            <p>&copy; 2022 IMAZEBRA</p>
+        </footer>
     </body>
 </html>
