Hero unit completed

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
             <!-- Full bleed hero image -->
             <img src="images/zebra.jpg" alt="" />
             <h1>IMA Zebra</h1>
-            <a href="Africa"></a>
+            <a href=""class="button">Africa</a>
         </section>
           <!-- Main body content --> 
         <main>
             <h2>I'm a Zebra</h2>
             <article>
-                 <Article><img src="images/africa.png" alt="">
+                 <Article>
+                    <img src="images/africa.png" alt="">
                           <h3>My Home</h3>
                           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, doloremque!</p>
                          <a href="">See my Home</a>"
