social links completed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <!-- Full bleed hero image -->
             <img src="images/zebra.jpg" alt="" />
             <h1>IMA Zebra</h1>
-            <a href=""class="button">Africa</a>
+            <a href=""class="button btn-white">Africa</a>
         </section>
           <!-- Main body content --> 
         <main>
@@ -33,29 +33,34 @@
                     <img src="images/africa.png" alt="">
                           <h3>My Home</h3>
                           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, doloremque!</p>
-                         <a href="">See my Home</a>"
+                         <a href="" class="button btn-purple">See my Home</a>
                         </Article> 
                 <article>
                     <img src="images/grass.jpg" alt="">
                     <h3>My diet</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, doloremque!</p>
-                   <a href="">Grass is great</a>"
+                   <a href="" class="button btn-purple">Grass is great</a>
                 </Article>
                 <Article><img src="images/stripes.jpg" alt="">
                     <h3>Zebra stripes</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, doloremque!</p>
-                   <a href="">Check out my stripes</a>
+                   <a href="" class="button btn-purple">Check out my stripes</a>
                 </Article>
                 </article>
         </main>
         <!-- full width section,above footer -->
         <section id="social-links">
-            <p>I'm pretty social too, we should be friends.</p>
-            <a href=""><img src="images/facebook.svg" alt="facebook"></a>
-            <a href=""><img src="images/twitter.svg" alt="Twitter"></a>
-            <a href=""><img src="images/instagram.svg" alt="Instagram"></a>
-            <a href=""><img src="images/linkedin.svg" alt="Linkedin"></a>
-       </section>
+            <div>           
+                 <p>I'm pretty social too, we should be friends.</p>
+                 <div> 
+                    <a href=""><img src="images/facebook.svg" alt="facebook"></a>
+                    <a href=""><img src="images/twitter.svg" alt="Twitter"></a>
+                    <a href=""><img src="images/instagram.svg" alt="Instagram"></a>
+                    <a href=""><img src="images/linkedin.svg" alt="Linkedin"></a>
+                </div>
+               
+            </div>
+         </section>
        <!-- foooter -->
         <footer>
             <p>&copy; 2022 IMAZEBRA</p>
