--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
           <!-- Main body content --> 
         <main>
             <h2>I'm a Zebra</h2>
-            <article>
-                 <Article>
+                 <article>
                     <img src="images/africa.png" alt="">
                           <h3>My Home</h3>
                           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, doloremque!</p>
@@ -40,12 +39,11 @@
                     <h3>My diet</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, doloremque!</p>
                    <a href="" class="button btn-purple">Grass is great</a>
-                </Article>
-                <Article><img src="images/stripes.jpg" alt="">
+                </article>
+                <article><img src="images/stripes.jpg" alt="">
                     <h3>Zebra stripes</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, doloremque!</p>
                    <a href="" class="button btn-purple">Check out my stripes</a>
-                </Article>
                 </article>
         </main>
         <!-- full width section,above footer -->
